--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
+N8N_WEBHOOK_URL=
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
